Source/Wasm/Dora/ArrayWasm.hpp

static int32_t array_type()
{
	return DoraType<Array>();
}
static int32_t array_is_empty(int64_t self)
{
	return r_cast<Array*>(self)->isEmpty() ? 1 : 0;
}
static void array_add_range(int64_t self, int64_t other)
{
	r_cast<Array*>(self)->addRange(r_cast<Array*>(other));
}
static void array_remove_from(int64_t self, int64_t other)
{
	r_cast<Array*>(self)->removeFrom(r_cast<Array*>(other));
}
static void array_clear(int64_t self)
{
	r_cast<Array*>(self)->clear();
}
static void array_reverse(int64_t self)
{
	r_cast<Array*>(self)->reverse();
}
static void array_shrink(int64_t self)
{
	r_cast<Array*>(self)->shrink();
}
static void array_swap(int64_t self, int32_t index_a, int32_t index_b)
{
	r_cast<Array*>(self)->swap(s_cast<int>(index_a), s_cast<int>(index_b));
}
static int32_t array_remove_at(int64_t self, int32_t index)
{
	return r_cast<Array*>(self)->removeAt(s_cast<int>(index)) ? 1 : 0;
}
static int32_t array_fast_remove_at(int64_t self, int32_t index)
{
	return r_cast<Array*>(self)->fastRemoveAt(s_cast<int>(index)) ? 1 : 0;
}